Pivot refactor and fix + Header styling and Documentation trigger (#67)
* feat(colors): copy function for colors names

* tests(parser): tests for parser

* testing(parser): adding coverage and gitignoring /coverage with report

* tests(parser): covering example when there is no tokens

* chore(parser.spec): adjusting message for example #2

* chore(parser): cleanup

* feat(text): adding text element

* chore(text): adding uxpinconfig

* chore(text): fix for props ref

* feat(Text): adding nowrap and block to Text elm

* feat(Text) adding color to element

* chore(Text): codeeditor type for elm

* fix(header): changing code projects to projects

* fix(pivot): fixing and refactoring Pivot

* chore(pivot): metadata

* chore(pivot): trying to fix wrapper

* fix(header): adjusting position of icons in top left corner

* feat(header): on documentation click

* chore(header): documentaion styling and trigger adjustment

--- a/src/PPHeader/index.scss
+++ b/src/PPHeader/index.scss
@@ -3,13 +3,13 @@
   position: relative;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   display: grid;
-  grid-template-columns: 150px 1fr min-content 175px;
+  grid-template-columns: 150px 1fr min-content 160px;
   height: 44px;
   min-width: 1200px;
   margin-bottom: 30px;
 
   .logo {
-    margin: 10px 28px;
+    margin: 10px 28px 0;
     .logoTitle {
       color: var(--color-grey-700);
     }
@@ -35,22 +35,19 @@
 
   .bar {
     display: grid;
-    grid-template-columns: repeat(4, min-content);
+    grid-template-columns: repeat(5, 1fr);
     align-items: center;
-    margin-top: -3px;
-
-    button {
-      margin-top: -10px;
-    }
 
     i {
       font-size: 18px;
     }
     .ms-Persona {
-      width: 20px;
       display: inline-block;
-      // margin: 8px 0;
+      margin: 5px;
     }
+  }
+  .documentation {
+    cursor: pointer;
   }
 }
 
